added support for multi user

--- a/config.html
+++ b/config.html
@@ -1,10 +1,11 @@
-{% extends "admin/base.html" %}
+{% extends "base.html" %}
 
 {% block content %}
 {% endblock %}
 
 {% block scripts %}
+<h1>Loading...</h1>
 <script type="text/javascript">
-    window.location = script_root + "/admin/containers"
+    window.location = "/containers"
 </script>
 {% endblock %}
