Admin overview WIP

--- a/config.html
+++ b/config.html
@@ -1,11 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
+<h1>Overview</h1>
 {% endblock %}
 
 {% block scripts %}
-<h1>Loading...</h1>
-<script type="text/javascript">
-    window.location = "/containers"
-</script>
 {% endblock %}
