--- a/config.html
+++ b/config.html
@@ -1,7 +1,7 @@
 {% extends "admin/base.html" %}
 
 {% block content %}
-<h1>Overview</h1>
+<h1>Loading...</h1>
 {% endblock %}
 
 {% block scripts %}
